# checkmark

./: .gitignore  README.md  pyproject.toml
beta/: README.md  main.py  main2.py
checkmarks/: cli.py  core.py  init.py
tests/: test_cli.py  test_core.py
