[project]
name = "checkmark"
version = "0.1.0"
description = "A simple CLI for tracking progress with markdown checklists"
authors = [
  { name = "menisadi", email = "menisadi@gmail.com" }
]

readme = "README.md"
readme-content-type = "text/markdown"

license = { file = "LICENSE" }

keywords = ["cli", "markdown", "checklists"]

dependencies = []

[project.scripts]
checkmark = "checkmark.cli:main"
