[project]
name = "checkmarks"
version = "0.2.0"
description = "A simple CLI for tracking progress with markdown checklists"
authors = [
  { name = "menisadi", email = "menisadi@gmail.com" }
]
requires-python = ">=3.10"

readme = "README.md"

license = { file = "LICENSE" }

keywords = ["cli", "markdown", "checklists"]

dependencies = [
  "rich>=13.0.0",
]

[project.scripts]
checkmarks = "checkmarks.cli:main"

[project.urls]
"Homepage" = "https://github.com/menisadi/checkmarks"
"Issues" = "https://github.com/menisadi/checkmarks/issues"
